--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
           <img src="xuxu6.jpg" alt="Imagem 6" />
         </div>
         <div class="carousel-item">
-          <img src="xuxu7.jpeg" alt="Imagem 7" />
+          <img src="xuxu7.jpg" alt="Imagem 7" />
         </div>
         <div class="carousel-item">
-          <img src="xuxu8.jpeg" alt="Imagem 8" />
+          <img src="xuxu8.jpg" alt="Imagem 8" />
         </div>
         <div class="carousel-item">
-          <img src="xuxu9.jpeg" alt="Imagem 9" />
+          <img src="xuxu9.jpg" alt="Imagem 9" />
         </div>
         <div class="carousel-item">
-          <img src="xuxu10.jpeg" alt="Imagem 10" />
+          <img src="xuxu10.jpg" alt="Imagem 10" />
         </div>
         <div class="carousel-item">
-          <img src="xuxu11.jpeg" alt="Imagem 11" />
+          <img src="xuxu11.jpg" alt="Imagem 11" />
         </div>
       </div>
       <button
@@ -106,15 +106,12 @@
 
       <div class="quote-section">
         <div class="quote">
-          <p>"Citação 1 aqui."</p>
-        </div>
-        <div class="quote">
-          <p>"Citação 2 aqui."</p>
+          <p>"Hoje celebramos mais um capítulo da nossa história, e meu coração transborda gratidão por cada momento vivido ao seu lado. Ter você como minha namorada é o maior presente que a vida me deu. Você é o meu amor, minha paz, meu sorriso nos dias difíceis e a razão da minha felicidade. Que esse amor continue crescendo e iluminando nossos caminhos. Feliz aniversário de namoro, meu amor. Te amo mais do que qualquer palavra pode expressar. 💖"</p>
         </div>
       </div>
 
       <div class="footer">
-        <p>Desenvolvido com amor por seu Xuxu❤</p>
+        <p>Desenvolvido com amor por seu Xuxu 💖</p>
       </div>
     </div>
 
