--- a/index.html
+++ b/index.html
@@ -110,11 +110,23 @@
         </div>
       </div>
 
+      <div class="ticket-container">
+
+        <button class="gift-button"
+          onclick="showGift()">
+          Seu presente
+        </button>
+
+       <div class="ticket">
+          <h1><b>CARTÃO PRESENTE</b></h1>
+          <div class="amount">R$500,00</div>
+          <small>Bora usar?</small>
+        </div>
+      </div>
+
       <div class="footer">
         <p>Desenvolvido com amor por seu Xuxu 💖</p>
       </div>
-    </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="counter.js"></script>
     <script src="entrance.js"></script>
@@ -122,5 +134,14 @@
     <script src="player.js"></script>
     
     <div class="hearts-container" id="hearts-container"></div>
+    <script type="text/javascript">
+      function showGift(){
+        document.getElementsByClassName('ticket')[0].style.opacity = '1';
+        document.getElementsByClassName('ticket')[0].style.height = 'auto';
+        document.getElementsByClassName('ticket')[0].style.padding = '40px 30px';
+
+        document.getElementsByClassName('gift-button')[0].style.display = 'none';
+      }
+    </script>
   </body>
 </html>
