feat: update texts and styles

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
       <div class="quote-section">
         <div class="quote">
-          <p>"Hoje celebramos mais um capítulo da nossa história, e meu coração transborda gratidão por cada momento vivido ao seu lado. Ter você como minha namorada é o maior presente que a vida me deu. Você é o meu amor, minha paz, meu sorriso nos dias difíceis e a razão da minha felicidade. Que esse amor continue crescendo e iluminando nossos caminhos. Feliz aniversário de namoro, meu amor. Te amo mais do que qualquer palavra pode expressar. 💖"</p>
+          <p>"Hoje celebramos mais um capítulo da nossa história, e meu coração transborda gratidão por cada momento vivido ao seu lado. Ter você ao meu lado é o maior presente que a vida me deu. Você é o meu amor, minha paz, meu sorriso nos dias difíceis e a razão da minha felicidade. Que esse amor continue crescendo e iluminando nossos caminhos. Te amo xuxuzinho 💖"</p>
         </div>
       </div>
 
@@ -118,9 +118,9 @@
         </button>
 
        <div class="ticket">
-          <h1><b>CARTÃO PRESENTE</b></h1>
-          <div class="amount">R$500,00</div>
-          <small>Bora usar?</small>
+          <h1><b>VALE-PRESENTE</b></h1>
+          <div class="amount">R$ O que o coração mandar</div>
+          <small>Compre algo que te faça feliz (e lembre de mim)</small>
         </div>
       </div>
 
