fix: button click here

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h1 style="margin-bottom: 20px">Te amo xuxuzinho</h1>
       <button
         onclick="startExperience()">
-        Vamos lá 💖
+        Clique aqui 💖
       </button>
     </div>
 
